Fix Docker permission issues by removing named volumes
- Replace named Docker volumes with bind mounts in docker-compose.yml
- Named volumes were created as root, causing permission issues
- Add docker-clean target to Makefile for cleaning up old volumes
- Create directories on host before Docker runs to ensure correct ownership
- Add .cache to .gitignore
- Simplify docker commands by removing redundant permission fix steps

--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,9 @@ logs/nohup_cdm_test.out
 *.log
 !ontology_versions*/download_history.log
 
+# Cache directory
+.cache/
+
 # Virtual environments
 venv/
 ENV/
