Add ability to skip non-core ontology analysis
- Add SKIP_NON_CORE_ANALYSIS=true to production .env
- Modify CLI to check this variable and skip Step 2 when set
- This prevents automatic discovery/download of additional ontologies
- Production runs will only process ontologies in source file
- Test runs can still exercise the full functionality
- Add clean_run.sh script for easy cleanup between runs

--- a/.env
+++ b/.env
@@ -21,3 +21,6 @@ ENABLE_MEMORY_MONITORING=true
 ENABLE_TSV_EXPORT=true
 ENABLE_PARQUET_EXPORT=true
 CREATE_UTILS_LOGS=true
+
+# Workflow Control
+SKIP_NON_CORE_ANALYSIS=true
